deploy/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sandbox-gateway
  namespace: sandbox
spec:
  gatewayClassName: istio
  listeners:
    - name: http
      hostname: "*.auenkr.com"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    # - name: https
    #   hostname: "*.auenkr.com"
    #   port: 443
    #   protocol: HTTPS
    #   tls:
    #     mode: Terminate
    #     certificateRefs:
    #       - name: auenkr-com-tls
    #   allowedRoutes:
    #     namespaces:
    #       from: All
