deploy/sandbox-b-httpRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sandbox-b
spec:
  parentRefs:
    - name: sandbox-gateway
      namespace: sandbox
  hostnames:
    - "sandbox-b-3000.auenkr.com"
    - "sandbox-b-4000.auenkr.com"
  rules:
    - matches:
        - headers:
            - name: Host
              value: sandbox-b-3000.auenkr.com
      backendRefs:
        - name: sandbox-b
          port: 3000
    - matches:
        - headers:
            - name: Host
              value: sandbox-b-4000.auenkr.com
      backendRefs:
        - name: sandbox-b
          port: 4000
